--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "aptos-creator-studio-tools",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "This project is to give you the react tools to build your own creator studio",
   "main": "./dist/index.js",
   "scripts": {
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["aptos", "aptos creator studio tools", "aptos marketplace tools"],
+  "keywords": [
+    "aptos",
+    "aptos creator studio tools",
+    "aptos marketplace tools"
+  ],
   "author": "Sallem Ahmed",
   "license": "ISC",
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.5.1",
     "@aptos-labs/wallet-adapter-core": "^3.5.0",
     "@babel/preset-env": "^7.23.9",
-    "babel-preset-es2015": "^6.24.1",
-    "react": "^18.2.0",
-    "uglify-js": "^3.17.4"
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "ts-loader": "^9.5.1",
