--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aptos-creator-studio-tools",
-  "version": "1.0.8",
+  "version": "1.0.20",
   "description": "This project is to give you the react tools to build your own creator studio",
   "main": "./dist/index.js",
   "scripts": {
@@ -17,7 +17,11 @@
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.5.1",
     "@aptos-labs/wallet-adapter-core": "^3.5.0",
+    "@babel/plugin-transform-typescript": "^7.23.6",
     "@babel/preset-env": "^7.23.9",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.3",
+    "babel-preset-react": "^6.24.1",
     "react": "^18.2.0"
   },
   "devDependencies": {
