--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
       "sourceMap": true,
-      "jsx": "react"
+      "jsx": "react",
+      "strict": true,
     }
   }
